--- a/src/styles/dark-override.css
+++ b/src/styles/dark-override.css
@@ -14,14 +14,33 @@
 
 .dark .ant-menu-light .ant-menu-item-icon,
 .dark .ant-menu-dark .ant-menu-item-icon,
-.dark .ant-menu .ant-menu-item-icon {
+.dark .ant-menu .ant-menu-item-icon,
+.dark .ant-menu-item-icon svg {
   color: #e8e8e8 !important;
+  fill: #e8e8e8 !important;
 }
 
 .dark .ant-menu-light .ant-menu-title-content,
 .dark .ant-menu-dark .ant-menu-title-content,
 .dark .ant-menu .ant-menu-title-content {
   color: #e8e8e8 !important;
+}
+
+/* 修复 anticon 图标 */
+.dark .anticon {
+  color: inherit !important;
+}
+
+.dark .ant-menu-item .anticon {
+  color: #e8e8e8 !important;
+}
+
+.dark .ant-menu-item:hover .anticon {
+  color: #ffffff !important;
+}
+
+.dark .ant-menu-item-selected .anticon {
+  color: #1890ff !important;
 }
 
 .dark .ant-menu-light .ant-menu-item:hover,
@@ -34,10 +53,12 @@
 .dark .ant-menu-light .ant-menu-item:hover .ant-menu-item-icon,
 .dark .ant-menu-dark .ant-menu-item:hover .ant-menu-item-icon,
 .dark .ant-menu .ant-menu-item:hover .ant-menu-item-icon,
+.dark .ant-menu-item:hover .ant-menu-item-icon svg,
 .dark .ant-menu-light .ant-menu-item:hover .ant-menu-title-content,
 .dark .ant-menu-dark .ant-menu-item:hover .ant-menu-title-content,
 .dark .ant-menu .ant-menu-item:hover .ant-menu-title-content {
   color: #ffffff !important;
+  fill: #ffffff !important;
 }
 
 .dark .ant-menu-light .ant-menu-item-selected,
@@ -50,10 +71,12 @@
 .dark .ant-menu-light .ant-menu-item-selected .ant-menu-item-icon,
 .dark .ant-menu-dark .ant-menu-item-selected .ant-menu-item-icon,
 .dark .ant-menu .ant-menu-item-selected .ant-menu-item-icon,
+.dark .ant-menu-item-selected .ant-menu-item-icon svg,
 .dark .ant-menu-light .ant-menu-item-selected .ant-menu-title-content,
 .dark .ant-menu-dark .ant-menu-item-selected .ant-menu-title-content,
 .dark .ant-menu .ant-menu-item-selected .ant-menu-title-content {
   color: #1890ff !important;
+  fill: #1890ff !important;
 }
 
 /* 修复侧边栏折叠按钮 */
